# seller-ops-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: dependencies.py  logging.py  main.py  settings.py
app/api/: router.py  schemas.py
app/api/endpoints/: health.py  incidents.py  inventory.py  orders.py  pricing.py  runbooks.py  tools.py  workflows.py
app/application/services/: audit.py  incidents.py  knowledge_base.py  queries.py  toolbox.py
app/application/workflows/: engine.py  state.py
app/domain/: enums.py  events.py  schemas.py
app/infrastructure/db/: base.py  models.py  session.py
app/infrastructure/llm/: base.py  factory.py  mock.py  openai.py
app/infrastructure/messaging/: redpanda.py
app/infrastructure/observability/: metrics.py
app/infrastructure/redis/: client.py  idempotency.py
app/infrastructure/tools/: marketplace.py  ticketing.py
app/workers/: runner.py
docs/: api.md  architecture.md  operations.md  workflows.md
examples/incidents/: inventory_mismatch.json  order_stuck.json  price_anomaly.json  sync_timeout.json
migrations/: env.py
migrations/versions/: 0001_initial.py
monitoring/grafana/dashboards/: operations.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
scripts/: run_demo.py  start_api.sh  start_worker.sh
seed/: cli.py  demo_data.py
tests/: conftest.py
tests/integration/: test_incident_flow.py
tests/unit/: test_approval_logic.py  test_retry_behavior.py  test_workflow_transitions.py
