[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-ops-platform"
version = "0.1.0"
description = "Сервис для обработки операционных инцидентов маркетплейсов."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "kafka-python>=2.0.2,<3.0.0",
  "langgraph>=0.2.40,<1.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "redis>=5.0.8,<6.0.0",
  "SQLAlchemy>=2.0.35,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2,<2.0.0",
  "pytest>=8.3.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "seed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
]
ignore = [
  "B008",
  "E501",
]

[tool.mypy]
python_version = "3.12"
plugins = []
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
disable_error_code = ["assignment", "arg-type", "union-attr", "no-any-return"]
exclude = [
  "migrations/",
]
